모바일 미소원 치아교정 페이지 작업

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -841,6 +841,11 @@ section.board-link ul li {
 }
 
 @media screen and (max-width: 640px) {
+    section.img-four p {
+        padding: 0 30px;
+        box-sizing: border-box;
+        word-break: keep-all;
+    }
     section.img-four .text li {
         width: 50%;
     }
