--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -976,6 +976,9 @@ section.board-link ul li {
 }
 
 @media screen and (max-width: 414px) {
+    section.section-quotes-title-right .bg {
+        bottom: -25px;
+    }
     .table .max-layout-width h2 {
         line-height: 1.3;
         word-break: keep-all;
@@ -1007,8 +1010,19 @@ section.board-link ul li {
     }
 }
 
+@media screen and (max-width: 375px) {
+    section.section-quotes-title-right .bg {
+        bottom: -25px;
+        height: 260px;
+    }
+}
+
 @media screen and (max-width: 360px) {
     section.list-content .image_box_left {
         top: 350px;
+    }
+    section.section-quotes-title-right .bg {
+        bottom: -15px;
+        height: 280px;
     }
 }
