--- a/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
@@ -17,6 +17,10 @@
     word-break: keep-all;
 }
 
+.mobile-text {
+    display: none;
+}
+
 .section01 .section-title {
     line-height: 1.25;
     display: inline-block;
@@ -690,4 +694,243 @@ section.board-link {
 
 .board-link .section-title {
     line-height: 1.25;
+}
+
+@media screen and (max-width: 1300px) {
+    .section06 .max-layout-width {
+    }
+    .img-three li img {
+        width: 100%;
+    }
+    .img-three .max-layout-width {
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+    .img-right .max-layout-width {
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+    .section03 .border {
+        left: 50%;
+        margin-left: -320px;
+        margin-top: -30px;
+    }
+    .section03 .img-box .img {
+        margin: 0 auto;
+        margin-top: 80px;
+    }
+    .section03 .text ul {
+        overflow: hidden;
+        padding-top: 0;
+    }
+    .section03 .text li span {
+        width: 100%;
+        font-size: 18px;
+    }
+    .section03 .text li p {
+        overflow: hidden;
+    }
+    .section03 .text li {
+        width: 20%;
+        float: left;
+        overflow: hidden;
+        margin: 0 !important;
+        text-align: center;
+        padding-left: 0;
+        height: 55px;
+        line-height: 55px;
+    }
+    .section03 .max-layout-width .con > div.text {
+        display: none;
+    }
+    .section03 .max-layout-width .con > div.text.mobile-text {
+        display: block;
+    }
+    .tab-paging {
+        display: none;
+    }
+    .section03 .max-layout-width .con > div {
+        width: 100%;
+        float: none;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .tab-contents2 .section05 .max-layout-width .text p {
+        width: 100%;
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .section04 .text > div {
+        padding-left: 0;
+    }
+    section.list-content .section-title {
+        margin-bottom: 370px;
+    }
+    section.list-content {
+        padding-top: 0;
+    }
+    section.list-content .section-title {
+        padding-top: 0;
+    }
+    section.list-content .image_box_left {
+        top: 80px;
+        width: 100%;
+        left: 0;
+    }
+    .section05 {
+        margin-top: 100px;
+    }
+    .section06 ul li p {
+        line-height: 1.3;
+        padding: 0 10px;
+        box-sizing: border-box;
+        word-break: keep-all;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .section06 ul li p {
+        font-size: 15px;
+    }
+    .section06 .section-title {
+        font-size: 32px;
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+    .section06 .section-title br {
+        display: none;
+        word-break: keep-all;
+    }
+    .section06 .section-text {
+        width: 100%;
+        padding: 0 20px;
+        box-sizing: border-box;
+    }
+    .section09 li p {
+        font-size: 12px;
+    }
+    .img-right .max-layout-width .text {
+        padding-top: 321px;
+        width: 100%;
+    }
+    .img-right .image_box_right {
+        width: 100%;
+        height: 321px;
+    }
+    .background-animation .max-layout-width .text h2 {
+        padding: 0 30px;
+        box-sizing: border-box;
+        word-break: keep-all;
+    }
+    .section03 .text ul {
+        padding-top: 30px;
+    }
+    .section02 ul {
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+    .section02 li {
+        width: 48%;
+        margin-left: 2%;
+        margin-bottom: 2%;
+    }
+    .section03 .border {
+        width: 90%;
+        left: 2%;
+        margin-left: 0;
+    }
+    .section03 .img-box .img {
+        width: 90%;
+        margin-right: 3%
+    }
+    .section03 .max-layout-width .con .img-box p {
+        padding: 0 30px;
+        box-sizing: border-box;
+        word-break: keep-all;
+    }
+    .section03 .max-layout-width .con .img-box p br {
+        display: none;
+    }
+    .section03 .section-title {
+        box-sizing: border-box;
+        padding: 0 30px;
+        font-size: 32px;
+        word-break: keep-all;
+    }
+    .section03 .section-text {
+        box-sizing: border-box;
+        padding: 0 30px;
+        font-size: 12px;
+        margin-top: 30px;
+        margin-bottom: 0;
+        word-break: keep-all;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    .section05 {
+        padding-bottom: 50px;
+        height: auto;
+    }
+    .tab-contents3 .section05 .max-layout-width .text {
+        padding-top: 50px;
+    }
+    .section05 .max-layout-width .text {
+        padding-top: 70px;
+    }
+    .section05 .max-layout-width .text p {
+        box-sizing: border-box;
+        padding: 0 30px;
+        word-break: keep-all;
+    }
+    .section05 .max-layout-width .text {
+        padding-top: 70px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .section09 li p {
+        font-size: 14px;
+    }
+    .section09 li {
+        width: 100%;
+        margin-bottom: 50px;
+    }
+    .section05 {
+        height: auto;
+        padding-bottom: 60px;
+    }
+    .section03 .img-box .img {
+        background-size: contain;
+        height: 203px;
+    }
+    .section02 .section-title {
+        word-break: keep-all;
+    }
+    .section02 li {
+        padding-top: 8px;
+    }
+    .section02 li {
+        height: 160px;
+        box-sizing: border-box;
+    }
+    .section02 .img {
+        transform: scale(0.8);
+    }
+    .section02 li p {
+        font-size: 14px;
+    }
+    .section03 .border {
+        height:203px
+    }
+}
+
+@media screen and (max-width: 380px)  {
+    .section03 .border {
+        height:180px
+    }
 }
