--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -537,7 +537,7 @@ body {
     width: 71px;
     height: 71px;
     border: none;
-    margin-top: 180px;
+    margin-top: 172px;
     top: 0;
     background: none;
     border: 1px solid #98989a;
@@ -581,7 +581,7 @@ body {
 }
 
 .section07 .max-layout-width:first-child {
-    padding-top: 100px;
+    padding-top: 108px;
     margin-bottom: 0;
 }
 
@@ -1010,7 +1010,7 @@ body .section07 .bx-pager-link span + span {
 
 .section05 .doctor-slider {
     width: 33.6%;
-    padding-top: 333px;
+    padding-top: 300px;
     height: 567px;
     overflow: hidden;
 }
@@ -1060,12 +1060,12 @@ body .section07 .bx-pager-link span + span {
 }
 
 .section05 .sub-text {
-    font-size: 39px;
-    line-height: 1.25;
+    font-size: 40;
+    line-height: 1.15;
     color: #fff;
     margin-bottom: 78px;
     margin-top: 30px;
-    letter-spacing: 0px;
+    letter-spacing: -1px;
     font-family: ink !Important;
 }
 
@@ -1088,7 +1088,7 @@ body .section07 .bx-pager-link span + span {
 .section05 .max-layout-width {
     position: relative;
     z-index: 1;
-    padding-top: 95px;
+    padding-top: 143px;
 }
 
 .section05 .bg {
@@ -1420,14 +1420,17 @@ body .section07 .bx-pager-link span + span {
     font-size: 45px;
     color: #fff;
     font-weight: bold;
-    line-height: 1.4;
+    line-height: 1.25;
+    letter-spacing: -1px;
+    padding-top: 10px;
 }
 
 .section01 .text p {
-    margin-top: 10px;
+    margin-top: 15px;
     color: #fff;
     font-size: 18px;
     font-weight: 200;
+    letter-spacing: -0.5px;
 }
 
 .section01 .text a {
@@ -1762,12 +1765,14 @@ body .section07 .bx-pager-link span + span {
     line-height: 1.3;
     font-weight: 200;
     margin-bottom: 40px;
+    letter-spacing: -2px;
 }
 
 .section02 h5 {
     margin-top: 57px;
     font-size: 21px;
     line-height: 1.4;
+    letter-spacing: -1px;
 }
 
 .section02 .bg {
@@ -1782,7 +1787,7 @@ body .section07 .bx-pager-link span + span {
 .section02 .max-layout-width {
     z-index: 11;
     position: relative;
-    padding-top: 130px;
+    padding-top: 138px;
     box-sizing: border-box;
 }
 
@@ -1930,18 +1935,19 @@ body .section07 .bx-pager-link span + span {
     text-align: center;
     line-height: 55px;
     color: #fff;
+    margin-top: -58px;
 }
 
 .case .control {
     position: absolute;
     height: 0;
-    top: 80px;
+    top: 89px;
     width: 100%;
 }
 
 .case .max-layout-width {
     position: relative;
-    padding-top: 140px;
+    padding-top: 145px;
 }
 
 .case .control span {
@@ -1988,7 +1994,7 @@ body .section07 .bx-pager-link span + span {
 .community .community-container {
     width: 1538px;
     margin: 0 auto;
-    padding-top: 120px;
+    padding-top: 131px;
 }
 
 .community .community-container h1 {
@@ -1996,7 +2002,7 @@ body .section07 .bx-pager-link span + span {
     font-size: 36px;
     color: #fff;
     font-weight: 500;
-    margin-bottom: 85px;
+    margin-bottom: 67px;
 }
 
 .community .community-container > div {
@@ -2027,16 +2033,19 @@ body .section07 .bx-pager-link span + span {
     font-size: 34px;
     font-weight: 500;
     margin-bottom: 28px;
+    letter-spacing: -1.5px;
 }
 
 .community .online h3 {
     font-size: 33px;
-    line-height: 1.3;
+    line-height: 1.2;
     margin-bottom: 65px;
+    letter-spacing: -2px;
 }
 
 .community .online p {
     font-size: 18px;
+    letter-spacing: -0.5px;
 }
 
 .community .etc {
@@ -2070,6 +2079,7 @@ body .section07 .bx-pager-link span + span {
     font-weight: 500;
     margin-bottom: 94px;
     position: relative;
+    letter-spacing: -1.5px;
 }
 
 .community .etc .reserve h2:before {
@@ -2130,7 +2140,8 @@ body .section07 .bx-pager-link span + span {
     font-size: 16px;
     line-height: 1.5;
     color: #fff;
-    margin-bottom: 45px;
+    margin-bottom: 40px;
+    letter-spacing: -0.5px;
 }
 
 .community .etc ul li span {
@@ -2152,7 +2163,7 @@ body .section07 .bx-pager-link span + span {
 
 .section09 .max-layout-width {
     position: relative;
-    padding-top: 90px;
+    padding-top: 114px;
 }
 
 .section09 .bx-controls {
@@ -2181,7 +2192,7 @@ body .section07 .bx-pager-link span + span {
 }
 
 .section04 .text {
-    padding-top: 150px;
+    padding-top: 190px;
 }
 
 .footer-info-container, .footer-info-container .fp-tableCell {
