--- a/src/main/webapp/css/info/competitiveness.css
+++ b/src/main/webapp/css/info/competitiveness.css
@@ -673,13 +673,54 @@ section {
 }
 
 @media screen and (max-width: 414px) {
+    .section03 .img-box .img {
+        height: 135px;
+    }
+    .section03 {
+        padding-bottom: 50px;
+    }
+    .section03 .full-layout-width {
+        margin-top: 230px;
+    }
+    .section03 .image_box_right {
+        height: 172px;
+    }
+    .section03 .image_box_right .img, .section03 .img-box .img {
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    .section02 .max-layout-width > div:first-child {
+        height: 760px;
+    }
+    .section02 .section-text {
+        margin-top: 20px;
+    }
+    .section02 .img01 .img {
+        background-size: contain;
+        height: 187px;
+    }
+    .list li p {
+        font-size: 14px;
+        margin-bottom: -3px;
+    }
+    .list-img {
+        height: 100px;
+        width: 100px;
+        background-size: contain;
+        margin: 0 auto;
+    }
+    .section01 .section-title {
+        font-size: 31px;
+        word-break: keep-all;
+    }
+    .section01 .section-title br {
+        display: none;
+    }
     .list li:first-child {
         border-top: none;
     }
     .list li {
-        width: 100%;
-        height: 211px;
-        border-left: none !important;
+        height: 161px;
         border-top: 1px solid #c6c6c6 !important;
     }
     .list ul {
@@ -687,24 +728,81 @@ section {
     }
     .section02 .img01 {
         top: 260px;
+        height: 187px;
     }
     .section02 .img02 {
-        top: 680px;
+        top: 470px;
     }
     .section03 .img-box {
-        width: 100%;
         margin-left: 0;
         margin-bottom: 30px;
+        width: 48%;
+        margin-left: 2%;
+    }
+    .section03 .img-box span {
+        font-size: 14px;
     }
 }
 
 @media screen and (max-width: 390px) {
     .section03 .full-layout-width {
         margin-top: 426px;
-        margin-left: 0;
     }
 
     .section03 .section-title {
         font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .section03 .img-box .img {
+        height: 120px;
+    }
+    .section03 {
+        padding-bottom: 50px;
+    }
+    .section03 .full-layout-width {
+        margin-top: 190px;
+    }
+    .section03 .image_box_right {
+        height: 152px;
+    }
+    .section02 .img01 {
+        top: 260px;
+        height: 159px;
+    }
+    .section02 .img02 {
+        top: 460px;
+    }
+    .section02 .max-layout-width > div:first-child {
+        height: 700px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .section03 .img-box span {
+        font-size: 13px;
+    }
+    .section03 .img-box .img {
+        height: 115px;
+    }
+    .section03 {
+        padding-bottom: 50px;
+    }
+    .section03 .full-layout-width {
+        margin-top: 180px;
+    }
+    .section03 .image_box_right {
+        height: 145px;
+    }
+    .section02 .img01 {
+        top: 260px;
+        height: 159px;
+    }
+    .section02 .img02 {
+        top: 440px;
+    }
+    .section02 .max-layout-width > div:first-child {
+        height: 680px;
     }
 }
