--- a/src/main/webapp/css/implant/ondayImplants.css
+++ b/src/main/webapp/css/implant/ondayImplants.css
@@ -659,6 +659,41 @@ section.board-link {
 }
 
 @media screen and (max-width: 414px) {
+    .section05 .image_box_right + .text {
+        margin-top: 30px
+    }
+    section.img-four .text li {
+
+    }
+    .section05 .text li p {
+        font-size: 14px;
+    }
+    section.img-four .image_box_right {
+        height: 250px;
+    }
+    .section05 .img {
+        background-size: contain;
+        margin-bottom: 30px;
+    }
+    .section05 .text h2 {
+        font-size: 28px;
+        padding: 0 30px;
+        box-sizing: border-box;
+        line-height: 1.3;
+        word-break: keep-all;
+    }
+    .section04 {
+        margin-top: 80px;
+    }
+    .section02 .step {
+        margin-top: 0px;
+    }
+    .section02 .section-title, .section04 .section-title {
+        font-size: 28px;
+    }
+    body .section-top-title-left .section-title {
+        font-size: 25px;
+    }
     section.section-top-title-right-two .max-layout-width ul {
         top: 350px;
     }
@@ -667,5 +702,17 @@ section.board-link {
     }
     .section07 h2 {
         font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    section.section-quotes-title-right .bg {
+        height: 225px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    section.section-quotes-title-right .bg {
+        height: 215px;
     }
 }
