--- a/src/main/webapp/css/info/diagnosticEquipmentSystem.css
+++ b/src/main/webapp/css/info/diagnosticEquipmentSystem.css
@@ -442,6 +442,7 @@
     }
     .section03 {
         padding-bottom: 500px;
+        background: #f1f1f1;
     }
 }
 
@@ -538,5 +539,39 @@
     }
     .section03 .image_box_left {
         top: 330px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .section01 .text-box {
+        padding-top: 30px;
+        height: 160px;
+        bottom: -30px;
+    }
+    .section01 .text-box h2 {
+        font-size: 24px;
+    }
+    .section01 .slider-pagenation {
+        margin-top: 340px;
+    }
+    .section01 .slider-container > div.slider-box {
+        height: auto;
+    }
+    .section01 .slick-slide {
+        height: auto;
+    }
+    .section01 .swiper-slide {
+        height: auto;
+    }
+    .section01 .slider, .section01 .slick-slider .slick-list {
+        height: auto;
+    }
+    .slick-slide img {
+        display: block;
+        width: 100%;
+    }
+    .section01 .swiper-slide {
+        background: none !important;
+        height: auto;
     }
 }
