--- a/src/main/webapp/css/info/staff.css
+++ b/src/main/webapp/css/info/staff.css
@@ -346,7 +346,7 @@ p + .dec-title {
         display: none;
     }
     .doctor-info-left .text {
-        padding-top: 670px;
+        padding-top: 474px;
     }
     .doctor-info-left .text-bg {
         padding-top: 0;
@@ -364,16 +364,17 @@ p + .dec-title {
         top: 0;
         max-width: 100% !important;
     }
-    .image-box1, .image-box2 {
+    .image-box1, .image-box2, .image-box3 {
         width: 100% !important;
         max-width: 100%;
-        height: 634px;
+        height: 439px;
         background-position-y: top;
         background-repeat: no-repeat;
         background-position-x: center;
+        background-size: contain;
     }
     .text {
-        padding-top: 650px;
+        padding-top: 454px;
         padding-left: 0;
         position: relative;
     }
@@ -421,6 +422,8 @@ p + .dec-title {
 @media screen and (max-width: 414px)  {
     .title {
         font-size: 32px;
+        padding-right: 30px;
+        word-break: keep-all;
     }
     .doctor-title {
         font-size: 30px;
@@ -433,5 +436,21 @@ p + .dec-title {
     }
     .staff-contents .title br {
         display: none;
+    }
+}
+
+
+@media screen and (max-width: 413px) {
+    .doctor-info-left .text:before {
+        height: 174px;
+    }
+    .text {
+        padding-top: 423px;
+    }
+    .text-bg {
+        padding-top: 0;
+    }
+    .last-doctor-info .text:before {
+        height: 180px;
     }
 }
